--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ footer-links:
   flickr:
   github: https://github.com/TusharShah222
   linkedin: https://www.linkedin.com/in/tushar-shah
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  rss: Chess-icon.png
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
