--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: https://github.com/TusharShah222
   linkedin: https://www.linkedin.com/in/tushar-shah
-  rss: Chess-icon.png
+  rss:
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
